--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -5,12 +5,10 @@
 \usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,subcaption,array,verbatim,setspace, siunitx, tikz, flafter}
 \usepackage[pagewise,displaymath, mathlines]{lineno}
 \usepackage{epstopdf}
-
 \renewcommand{\theequation}{eqn \arabic{equation}}
 \makeatletter
 \def\tagform@#1{\maketag@@@{\ignorespaces#1\unskip\@@italiccorr}}
 \makeatother
-
 
 
 
@@ -98,7 +96,7 @@ Animal population size is one of the fundamental measures needed in ecology and 
 
 The methods for sampling populations are varied. Traditionally, human surveyors collecting data were the primary method, but sensor technology, such as camera traps \citep{ahumada2011community, rowcliffe2008surveys} and acoustic detectors \citep{ofarrel1999comparison, jones2011indicator, mellinger2007fixed} are becoming increasingly used to survey animal populations.  Sensors are growing in popularity, as they are efficient, relativity cheap and non-invasive \citep{gese2001monitoring, o2003crouching, silveira2003camera}. With respect to efficiency, the use of autonomous sensors allows for surveys over large areas and long periods. 
 
-Some species are much more easily detected or identified by acoustic detectors. For example, while bat identification by hand requires much training, methods are being developed to automatically identify species from their calls \citep{walters_2012, Adams_2010}. With respect to distance (or the radius of detection), large Cetaceans are loud enough to detected from tens of kilometres away, further than is possible visually \cite{clark1995application, barlow2005estimates, mcdonald2004difar}.  
+Some species are much more easily detected or identified by acoustic detectors. For example, while bat identification by hand requires much training, methods are being developed to automatically identify species from their calls \citep{walters_2012, Adams_2010}. With respect to distance (or the radius of detection), large Cetaceans are loud enough to detected from tens of kilometres away, further than is possible visually \citep{clark1995application, barlow2005estimates, mcdonald2004difar}.  
 
 
 However, the problem of converting sampled count data to estimates of density remains. The preferred method for estimating density if individuals can be recognised is capture-recapture e.g. \citep{karanth1995, trolle2003estimation, soisalo2006estimating, trolle2007camera}. If individual recognition is impossible but the distance between animal and sensor can be estimated, distance sampling methods can be used to estimate density, although these often ignore animal movement which may bias estimates \citep{barlow2005estimates, marques2011estimating}. Finally, methods for density estimation, based on ideal gas models (originally formulated by physicists to estimate contact rates between molecules) have been developed \citep{yapp1956theory, Hutchinson_Waser_2007}. The gas model has been modified for use with camera traps, which have an angle of detection (the angle within which an animal can be detected)  up to $\pi$ radians \citep{rowcliffe2008estimating}. This angle limitation may not apply to acoustic sensors. Furthermore, animal calls may be directional, and the existing random encounter model (REM) designed for camera trap data does not handle this case.
@@ -152,7 +150,7 @@ When the detection angle is smaller than $\pi$ we need to explicitly write funct
 
 \subsubsection{Example derivation}
 
-To work through one example that contains both $\theta$ and $\alpha$ we will examine model SE2. All other derivations are described in Appendix S1 with computer algebra scripts in Appendix S2. 
+To work through one example that contains both $\theta$ and $\alpha$ we will examine model SE2. All other derivations are described in Appendix S1 with computer algebra scripts in Appendix S2, and the R script of the implemented models in Appendix S3.  
 \begin{figure}[t]
         \centering
                 \begin{tikzpicture}[scale=0.39]
@@ -229,7 +227,7 @@ The focal angle is denoted by $x_i$ and is the angle which we integrate over. Th
 \label{f:xis}
 \end{figure}
 
-By rotating anticlockwise, from $x_1  = \pi/2$ the detection zone is $2r$ wide, as shown by the red line in Figure~ref{f:x1}. However, an animal will only be detected if it approaches the detector so that as it enters the detection region the angle between the direction of approach and the direction towards the sensor is less than $\alpha/2$. The width of the profile within which the animal will be detected is therefore $2r\sin(\alpha/2)$. At $x_1  = \theta/2 + \pi/2 - \alpha/2$ we reach a point where the right hand side of the profile (relative to the approach direction) is not limited by the call angle but is limited by the detection angle instead. From here the profile width is therefore $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin( \alpha/2)$. We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor). To find the average profile width for any angle of approach, we integrate these functions over their appropriate intervals of $x_1 $ and divide by $\pi$ to give:
+By rotating anticlockwise, from $x_1  = \pi/2$ the detection zone is $2r$ wide, as shown by the red line in Figure~\ref{f:x1}. However, an animal will only be detected if it approaches the detector so that as it enters the detection region the angle between the direction of approach and the direction towards the sensor is less than $\alpha/2$. The width of the profile within which the animal will be detected is therefore $2r\sin(\alpha/2)$. At $x_1  = \theta/2 + \pi/2 - \alpha/2$ we reach a point where the right hand side of the profile (relative to the approach direction) is not limited by the call angle but is limited by the detection angle instead. From here the profile width is therefore $r\sin( \alpha/2) + r\cos( x_1  - \theta/2)$. Finally, at $x_1  = 5\pi/2 - \theta/2  - \alpha/2$ an animal can again be detected from the right side of the detector; the approach angle is far enough round to see past the `blind spot' of the sensor. In this region, until $x_1  = 3\pi/2$, the width of the profile is again $2r\sin( \alpha/2)$. We have therefore characterised the profile width for $\pi$ radians of rotation (from directly towards the sensor to directly behind the sensor). To find the average profile width for any angle of approach, we integrate these functions over their appropriate intervals of $x_1 $ and divide by $\pi$ to give:
 
 \begin{align}
     p &=\frac{1}{\pi} \left(\int\limits_{\frac{\pi}{2}}^{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{\pi}{2} + \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r \sin{\left (\frac{\alpha}{2} \right )} + r \cos{\left (x_1 - \frac{\theta}{2} \right )}\;\mathrm{d}x_1+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{\frac{3 \pi}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_1\right) \nonumber  \\
@@ -243,23 +241,23 @@ D = z/vtp
 \end{equation}
 We can also see what causes this model to be discontinuously different to SE3. Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin( \alpha/2)$ while the right side is zero. This profile does not exist if we return to the full $2r\sin( \alpha/2)$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
-While specifying the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g.~\ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g.~\ref{e:p321} is zero when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests, as well as analytical derivations, are in Appendix S2. The models are implemented in an R script in Appendix S3. 
+While specifying the models had to be done by hand, the calculation of the solutions was done using SymPy \citep{sympy} in Python. The models were checked for errors with a number of tests. The models were checked against each other by checking that models which are adjacent in parameter space are equal at the boundary between them (e.g.~\ref{e:p321} is equal to 2r as in the gas model when $\alpha=\pi$ and $\theta=2\pi$). Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this was checked for (e.g.~\ref{e:p321} is zero when $\alpha=0$ and $\theta=2\pi$). We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests are included in Appendix S2. 
 
 \subsection{Simulation Model}
 
-In order validate the methods we developed we created a spatially explicit simulations of animal movement. By simulating animal movement with various movement patterns with a continuous space, and modelling a sensor surveying the population we got count data on how many animal contacts the sensors detected. We applied the analytical models to these data and compared it to the known input animal density in the simulation. We then tested whether the estimates were accurate (unbiased) and examined how precise they were.
+In order validate the methods we developed a spatially explicit simulations of animal movement. By simulating animal movement with various movement patterns with a continuous space containing sensors, we calculated how many animal contacts the sensors would have detected. 
 
-To reduce computation effort, a single set of 100 simulations was run at the high animal density for a long duration. Animal were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying focal angles and radii, and the results recorded separately. From this one set of simulations, data for all call and detection angle parameter values could be computed by subsampling. The details of each individual capture event, including the angle between the animals heading and the sensor were saved from the simulations.  From this the number of capture events was calculated for different call widths.
 
-Each of the 100 simulations consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries) and was populated with a density of \SI{70}{\animals\per\kilo\meter\squared} to match an expected maximum density of mammals in the wild \citep{damuth1981population}, creating a total of 3937 animals per simulation randomly placed at the start of the simulation. Animal movement was simulated with a simple movement model, characterised by a random movement distance for each discrete time step of 15 minutes. The animals did not change direction during the simulation. The simulation lasted for $N$ steps of duration $T$ during which the animals moved with an average speed, $v$. The distance travelled in each time step, $d$, was sampled from a Normal distribution with mean distance, $\mu_d = vT$,  and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. The detection radius $r$ was set to a value of 100m and simulations were run for \SI{150}{\day}.
 
+Each simulation consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square (with periodic boundaries) and was populated with a density of \SI{70}{\animals\per\kilo\meter\squared} to match an expected maximum density of mammals in the wild \citep{damuth1981population}, creating a total of 3937 animals per simulation randomly placed at the start of the simulation. Animal movement was simulated with a simple movement model, characterised by a random movement distance for each discrete time step of 15 minutes at the end of each step the animal can change direction up to a maximum specified angle. The simulation lasted for $N$ steps of duration $T$ during which the animals moved with an average speed, $v$. The distance travelled in each time step, $d$, was sampled from a Normal distribution with mean distance, $\mu_d = vT$,  and standard deviation $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. To reduce computation effort, a single set of 100 simulations was run at the high animal density for a long duration. 
+
+%We applied the analytical models to these data and compared it to the known input animal density in the simulation. We then tested whether the estimates were accurate (unbiased) and examined how precise they were.
+
+Animal were counted as they moved in and out of the detection zone of stationary detectors in the simulation. Multiple detectors were set up in each simulation with varying focal angles and radii, and the results recorded separately. From this one set of simulations, data for all call and detection angle parameter values could be computed by subsampling. The details of each individual capture event, including the angle between the animals heading and the sensor were saved from the simulations.  From this the number of capture events was calculated for different call widths.
 The total number of capture events were counted for each simulation and each set of parameters and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true and estimated densities were used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values were expected to converge to zero as sample size increases. For each of the 100 simulations we calculate the error (the difference between the known and estimated density) and so we got a distribution of errors which was approximately normal. We constructed box plots of the estimates error to graphically test for significant differences between the true and estimated densities. 
 
-%% Needs to be fitted in
-We ran simulations that broke the assumptions of model in order to see whether the model was still accurate when these assumptions were broken. We specifically looked at a a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions.
-
-We tested all the models to demonstrate the accuracy and precision while the assumptions of the model were met. But whilst demonstrating the accuracy and precision over with reduced data, and when model assumptions are broken four models were chosen (the NW1, SW1, NE1, and SE3). These models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all models in the gREM follow the same pattern as the four that we have shown in the main text. 
-
+We tested all the models to demonstrate the accuracy and precision while the assumptions of the model were met. But whilst demonstrating the accuracy and precision over with reduced data, and when model assumptions are broken four models were chosen (models NW1, SW1, NE1, and SE3). These models were chosen as they represent one model from each quadrant of Figure~\ref{f:equalModelResults}. The accuracy and precision of all models in the gREM follow the same pattern as the four that we have shown in the main text. 
+Further simulations were run where the assumption of the analytical models have not been met in order to see whether the model was still accurate when these assumptions were broken. We specifically looked at a a non-continuous movement, and a range of correlated random walks, both of which would be seen in real field conditions.
 
 \section{Results}
 
@@ -272,7 +270,7 @@ Although more thorough checks are performed in Appendix S3, it can be seen that 
 \begin{figure}
 \centering
 \includegraphics[width=0.6\textwidth]{imgs/equalModelResults.pdf}
-\caption{The derived expressions of for calculating the average profile width $p$. Despite independent derivation, many models result in the same expression. These are collected together and presented as one block of colour.}
+\caption{Equations for the profile wide, $p$, given sensor and call widths. Each colour block represents one equation, despite independent derivation within each block, many models result in the same expression. These are collected together and presented as one block of colour.}
 \label{f:equalModelResults}
 \end{figure}
 
@@ -283,7 +281,7 @@ Although more thorough checks are performed in Appendix S3, it can be seen that 
 \begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{imgs/AverageModelBias.pdf}
-	\caption{Distribution of the bias for each model. Percentage error of analytical model calculated from the simulation when settings are: $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. The number numbers referred to here can be found in Appendix S1 Figure 1, and the colour of each box plot match the functional form of the equation as seen in Figure~\ref{f:equalModelResults}.
+	\caption{Distribution of the bias for each of the derived models. Percentage error of analytical model calculated from the simulation when settings are: $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. The number numbers referred to here can be found in Figure 1 Appendix S1, and the colour of each box plot match the functional form of the equation as seen in Figure~\ref{f:equalModelResults}.
   }
 	\label{f:ModelBias}
 \end{figure}
@@ -295,7 +293,7 @@ For each model we compared the estimated densities to the true densities in a si
 		\includegraphics[width=1\textwidth]{imgs/ResultStandardDeviation.pdf}
 		\caption{Angle of detector}
 		\label{f:StandardDevaition}
-        \caption{The standard deviation of the percentage error for sensor, and call angles between 0 and $2\pi$ where: $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models.        } 
+        \caption{The precision of the gREM given a range of detection and call angles. The standard deviation of the percentage error for sensor, and call angles between 0 and $2\pi$ where: $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. Where red indicates a high standard deviation and blue represents a low standard deviation.} 
 \end{figure}
 
 \begin{figure}[t]
@@ -303,8 +301,7 @@ For each model we compared the estimated densities to the true densities in a si
 	\includegraphics[width=1\textwidth]{imgs/ResultsNoCaptures.pdf}
          \caption{Number of captures}
            \label{f:Captures}
-        \caption{ The accuracy and precision of the four test models when given different numbers of captures where: $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models.
-        } 
+        \caption{Accuracy of the gREM reminds unchanged, whilst precision increases, with captures. Boxplots of four test models when given different numbers of captures where: $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. Where the model names refer to Figure 1 in Appendix S1.} 
 \end{figure}
 
 The precision of the model is dependent on the number of captures during the survey. In Figure~\ref{f:Captures} we can see that the model precision gets greater as the number of captures increase. As the number of captures reaches about 100 then the coefficient of variation falls below 10\% which could be considered negligible. %The number of captures is highly dependent on the speed of the animals, the size of the detection zone, and the length of the survey, as these values increase the number of captures is also likely to increase. 
@@ -317,14 +314,14 @@ The precision of the model is dependent on the number of captures during the sur
 	\includegraphics[width=1\textwidth]{imgs/ResultsPerch.pdf}
           \caption{Proportion of time spent stationary}
           \label{f:Perch}
-	\caption{Distribution of model error when simulated animals spend increasing proportion of time stationary where:  $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models.  } 
+	\caption{Accuracy and the precision of the gREM given changes in the amount of time an animal spends stationary on average. Distribution of model error when simulated animals spend increasing proportion of time stationary where:  $r = $\SI{100}{\meter}; $T = $\SI{150}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with detection angles varying between models. Where the model names refer to Figure 1 in Appendix S1. } 
 \end{figure}
 \begin{figure}[t]
                 \centering
 		\includegraphics[width=1\textwidth]{imgs/ResultsTort.pdf}
                 \caption{Angle of correlated walk}
                 \label{f:Tort}
-	\caption{Distribution of model error when simulated animals move with different types of correlated walk where:  $r = $\SI{10}{\meter}; $T = $\SI{352}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models. } 
+	\caption{Accuracy and the precision of the gREM given different types of correlated walks. Distribution of model error when simulated animals move with different types of correlated walk where:  $r = $\SI{10}{\meter}; $T = $\SI{352}{\day}; $v = $ \SI{40}{\kilo\meter\per\day}; $D=$\SI{70}{\animals\per\kilo\meter\squared}; and with angles varying between models.Where the model names refer to Figure 1 in Appendix S1.} 
 \end{figure}
 
                   
